tests, and small changes
Shamelessly copied tests from node-bencoding, changed code to work
against tests. Undid the global polyfil, made local instead

--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "bugs": {
     "url": "https://github.com/bruslim/bxxcode/issues"
   },
-  "homepage": "https://github.com/bruslim/bxxcode"
+  "homepage": "https://github.com/bruslim/bxxcode",
+  "devDependencies": {
+    "tape": "^2.13.3"
+  }
 }
